#20688 Ajuste code review